--- a/homework/build.gradle
+++ b/homework/build.gradle
@@ -1,8 +1,16 @@
 apply plugin: 'java'
+apply plugin: 'application'
+
+repositories {
+    mavenCentral()
+    maven {
+        url "http://mvnrepository.com/"
+    }
+}
 
 dependencies {
-    compile files('lib/commons-lang3-3.3.2.jar')
-    testCompile files('lib/hamcrest-all-1.3.jar', 'lib/junit-4.11.jar')
+    compile 'org.apache.commons:commons-lang3:3.3.2'
+    testCompile 'org.hamcrest:hamcrest-all:1.3', 'junit:junit:4.11'
 }
 
 task hello << {
