H1: add gradlew to run build. Boxing

--- a/homework/build.gradle
+++ b/homework/build.gradle
@@ -10,6 +10,9 @@ dependencies {
     testCompile 'junit:junit:4.11'
 }
 
+task wrapper(type: Wrapper) {
+}
+
 task hello << {
     println 'Hello world'
 }
