--- a/homework/build.gradle
+++ b/homework/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'idea'
+apply plugin: "jacoco"
 apply plugin: 'java'
 
 repositories {
@@ -11,6 +12,14 @@ dependencies {
 }
 
 task wrapper(type: Wrapper) {
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination "${buildDir}/jacocoHtml"
+    }
 }
 
 task hello << {
