H1: set value of replaceMultipleFour in properties. Boxing

--- a/homework/src/main/resources/fizzMuMu.properties
+++ b/homework/src/main/resources/fizzMuMu.properties
@@ -1,4 +1,5 @@
 #Thu Sep 11 16:43:55 GMT+08:00 2014
 value.contain.definedString=Fizz,Whizz,Buzz
 value.multiple.definedString=Fizz,Buzz,Whizz,Murmur
+value.multipleFour.definedString=Bingo
 amount.definedNumbers=4
