--- a/homework/src/main/resources/fizz.properties
+++ b/homework/src/main/resources/fizz.properties
@@ -1,4 +1,5 @@
 #Thu Sep 11 15:37:06 GMT+08:00 2014
 value.contain.definedString=Fizz,Whizz,Buzz
 value.multiple.definedString=Fizz,Buzz,Whizz
+value.multipleFour.definedString=Bingo
 amount.definedNumbers=3
