H1: fix the syntex. Boxing

--- a/homework/src/main/resources/fizz.properties
+++ b/homework/src/main/resources/fizz.properties
@@ -1,6 +1,6 @@
 #Thu Sep 11 15:37:06 GMT+08:00 2014
-definedString.list=value.contain.definedString,value.multiple.definedString
-value.contain.definedString=Fizz,Whizz,Buzz
-value.multiple.definedString=Fizz,Buzz,Whizz
+specialString.list=value.contain.specialString,value.multiple.specialString
+value.contain.specialString=Fizz,Whizz,Buzz
+value.multiple.specialString=Fizz,Buzz,Whizz
 replace.rule.list=com.boxing.rule.ReplaceContain,com.boxing.rule.ReplaceMultiple
-amount.definedNumbers=3
+amount.specialNumbers=3
