--- a/homework/src/main/resources/fizzMuMu.properties
+++ b/homework/src/main/resources/fizzMuMu.properties
@@ -1,7 +1,7 @@
 #Thu Sep 11 16:43:55 GMT+08:00 2014
-definedString.list=value.contain.definedString,value.multipleFour.definedString,value.multiple.definedString
-value.contain.definedString=Fizz,Whizz,Buzz
-value.multipleFour.definedString=Bingo
-value.multiple.definedString=Fizz,Buzz,Whizz,Murmur
+specialString.list=value.contain.specialString,value.multipleFour.specialString,value.multiple.specialString
+value.contain.specialString=Fizz,Whizz,Buzz
+value.multipleFour.specialString=Bingo
+value.multiple.specialString=Fizz,Buzz,Whizz,Murmur
 replace.rule.list=com.boxing.rule.ReplaceContain,com.boxing.rule.ReplaceFourMultiple,com.boxing.rule.ReplaceMultiple
-amount.definedNumbers=4
+amount.specialNumbers=4
